--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="site-credit mx-auto mt-4">
                 <div class="site-credit-inner">
                     <div class="credit-title"></div>
-                    <div class="credit-sub">Developed &amp; Designed by <strong>Uvais</strong></div>
+                    <div class="credit-sub">Developed &amp; Designed by <strong><a href="https://wa.me/917025560027?text=Hai Uvais , I Am From Arabic Fest website " target="_blank">Mohammed Uvais A.P </a></strong></div>
                 </div>
             </div>
         </div>
@@ -436,7 +436,7 @@
     <div id="print-area">
         <div class="print-header">
             <h2>مهرجان الضاد 2026</h2>
-            <p>معراج إلى النجاد - كشف الدرجات</p>
+            <p>معراج إلى النجاد </p>
         </div>
 
         <div class="print-info">
