--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="col-md-4 mb-3">
                     <a href="#" target="_blank" class="poster-link">
                         <div class="poster-card">
-                            <img src="img/2.jpg" alt="Poster 2">
+                            <img src="img/2.jpeg" alt="Poster 2">
                             <div class="poster-overlay">
                                 <span>ملصق ٢</span>
                             </div>
@@ -255,17 +255,17 @@
                     </a>
                 </div>
 
-                <!-- Poster 3 -->
+                <!-- Poster 3 
                 <div class="col-md-4 mb-3">
                     <a href="#" target="_blank" class="poster-link">
                         <div class="poster-card">
-                            <img src="poster3.jpg" alt="Poster 3">
+                            <img src="img/3.jpeg" alt="Poster 3">
                             <div class="poster-overlay">
                                 <span>ملصق ٣</span>
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
             
             <!-- FEEDBACK BUTTON -->
@@ -279,7 +279,7 @@
             <div class="site-credit mx-auto mt-4">
                 <div class="site-credit-inner">
                     <div class="credit-title"></div>
-                    <div class="credit-sub">Developed &amp; Designed by <strong><a href="https://wa.me/917025560027?text=Hai Uvais , I Am From Arabic Fest website " target="_blank">Mohammed Uvais A.P </a></strong></div>
+                    <div class="credit-sub">Developed &amp; Designed by <strong><a href="https://wa.me/917025560027?text=Hai Uvais , I Am From Arabic Fest website " target="_blank">  <span style="color: white;">Mohammed Uvais A.P</span></a></strong></div>
                 </div>
             </div>
         </div>
