--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
                 </li>
 
                 <!-- Additional Links -->
-                
-                </li>
                 <li class="list-group-item">
                     <a href="#" onclick="scrollToPoster(); closeOffcanvas();" class="text-decoration-none text-dark fw-semibold">
-                        <i class="fas fa-images me-2 text-info"></i> معرج الملصقات
+                        <i class="fas fa-images me-2 text-info"></i> معرض الملصقات
                     </a>
                 </li>
                 <li class="list-group-item">
@@ -93,7 +91,7 @@
     <header class="hero-section">
         <div class="container">
             <h1 class="display-4">مهرجان الضاد</h1>
-            <p class="lead"><i>معراج إلى النجاد  </i> </p>
+            <p class="lead"><i>معراج إلى النجاد</i></p>
             <small>تحت إشراف نادي اللغة العربية - لمرحلة التمهيدية</small>
         </div>
     </header>
@@ -151,56 +149,11 @@
                 </div>
             </div>
 
-            <!-- STUDENT NAME - GROUP WISE SECTION -->
-<!-- GROUP WISE STUDENT SECTION -->
-<div id="group-students" class="content-section d-none">
-    <h3 class="text-center border-bottom pb-2 mb-3">الطلاب حسب الفريق</h3>
-
-    <div class="row">
-
-        <!-- فريق الطاء -->
-        <div class="col-md-6 mb-3">
-            <div class="card">
-                <div class="card-header bg-success text-white fw-bold">فريق الطاء</div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><b>شهباس</b></li>
-                    <li class="list-group-item">هاشم شريف</li>
-                    <li class="list-group-item">محمد عاصف</li>
-                    <li class="list-group-item">صفوان</li>
-                    <li class="list-group-item">محمد أنشد</li>
-                    <li class="list-group-item">محمد شهل. تي.في</li>
-                    <li class="list-group-item">محمد نسيب</li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- فريق الصاد -->
-        <div class="col-md-6 mb-3">
-            <div class="card">
-                <div class="card-header bg-warning text-dark fw-bold">فريق الصاد</div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><b>محمد سهل. ان</b></li>
-                    <li class="list-group-item">محمد أنسل</li>
-                    <li class="list-group-item">محمد إصلاح</li>
-                    <li class="list-group-item">الحافظ عبد الله</li>
-                    <li class="list-group-item">محمد مشال</li>
-                    <li class="list-group-item">محمد جلشاد</li>
-                    <li class="list-group-item">محمد نهال</li>
-                    <li class="list-group-item">سيّد محمد عادل</li>
-                </ul>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
-
-            <!-- ALL STUDENTS GROUP WISE (inserted before المتصدرون) -->
+            <!-- ALL STUDENTS GROUP WISE (HOME CARD) -->
             <div id="all-students-grouped" class="card mb-3">
                 <div class="card-header bg-info text-white fw-bold text-center">جميع الطلاب حسب الفريق</div>
                 <div class="card-body" id="all-students-grouped-body">
-                    <!-- Populated by script.js -->
+                    <!-- Filled by script.js -->
                 </div>
             </div>
 
@@ -235,7 +188,7 @@
                 <div class="col-md-4 mb-3">
                     <a href="#" target="_blank" class="poster-link">
                         <div class="poster-card">
-                            <img src="img/1.jpeg" alt="Coming Soon">
+                            <img src="img/1.jpeg" alt="Poster 1">
                             <div class="poster-overlay">
                                 <span>ملصق ١</span>
                             </div>
@@ -254,18 +207,6 @@
                         </div>
                     </a>
                 </div>
-
-                <!-- Poster 3 
-                <div class="col-md-4 mb-3">
-                    <a href="#" target="_blank" class="poster-link">
-                        <div class="poster-card">
-                            <img src="img/3.jpeg" alt="Poster 3">
-                            <div class="poster-overlay">
-                                <span>ملصق ٣</span>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
             </div>
             
             <!-- FEEDBACK BUTTON -->
@@ -278,9 +219,55 @@
             <!-- CREDIT AT THE END OF HOME -->
             <div class="site-credit mx-auto mt-4">
                 <div class="site-credit-inner">
-                    <div class="credit-title"></div>
-                    <div class="credit-sub">Developed &amp; Designed by <strong><a href="https://wa.me/917025560027?text=Hai Uvais , I Am From Arabic Fest website " target="_blank">  <span style="color: white;">Mohammed Uvais A.P</span></a></strong></div>
+                    <div class="credit-sub">
+                        Developed &amp; Designed by 
+                        <strong><a href="https://wa.me/917025560027?text=Hai Uvais , I Am From Arabic Fest website " target="_blank">
+                            <span style="color: white;">Mohammed Uvais A.P</span>
+                        </a></strong>
+                    </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- GROUP STUDENTS PAGE (SEPARATE) -->
+        <div id="group-students" class="content-section d-none">
+            <h3 class="text-center border-bottom pb-2 mb-3">الطلاب حسب الفريق</h3>
+
+            <div class="row">
+
+                <!-- فريق الطاء -->
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <div class="card-header bg-success text-white fw-bold">فريق الطاء</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><b>شهباس</b></li>
+                            <li class="list-group-item">هاشم شريف</li>
+                            <li class="list-group-item">محمد عاصف</li>
+                            <li class="list-group-item">صفوان</li>
+                            <li class="list-group-item">محمد أنشد</li>
+                            <li class="list-group-item">محمد شهل. تي.وي</li>
+                            <li class="list-group-item">محمد نسيب</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- فريق الصاد -->
+                <div class="col-md-6 mb-3">
+                    <div class="card">
+                        <div class="card-header bg-warning text-dark fw-bold">فريق الصاد</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><b>محمد سهل. ان</b></li>
+                            <li class="list-group-item">محمد أنسل</li>
+                            <li class="list-group-item">محمد إصلاح</li>
+                            <li class="list-group-item">الحافظ عبد الله</li>
+                            <li class="list-group-item">محمد مشال</li>
+                            <li class="list-group-item">محمد جلشاد</li>
+                            <li class="list-group-item">محمد نهال</li>
+                            <li class="list-group-item">سيّد محمد عادل</li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -436,7 +423,7 @@
     <div id="print-area">
         <div class="print-header">
             <h2>مهرجان الضاد 2026</h2>
-            <p>معراج إلى النجاد </p>
+            <p>معراج إلى النجاد</p>
         </div>
 
         <div class="print-info">
@@ -464,7 +451,7 @@
         </div>
 
         <div class="print-footer">
-            <p>Developed By Uvais A.P</p>
+            <p>Developed By <span>Uvais A.P</span></p>
         </div>
     </div>
 
@@ -472,5 +459,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
