--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <h4 class="text-center mb-3">تسجيل دخول المشرف</h4>
                 <div class="mb-3">
                     <label class="form-label">Email</label>
-                    <input type="email" id="admin-email" class="form-control" dir="ltr" placeholder="muhammeduvaisap786@gmail.com">
+                    <input type="email" id="admin-email" class="form-control" dir="ltr" placeholder="Admin login Id">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Password</label>
