--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="container">
             <h1 class="display-4">مهرجان الضاد</h1>
             <p class="lead"><i>معراج إلى النجاد</i></p>
-            <small>تحت إشراف نادي اللغة العربية - لمرحلة التمهيدية</small>
+            <small>تحت إشراف نادي اللغة العربية - للمرحلة التمهيدية</small>
         </div>
     </header>
 
