--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
+    <meta name="theme-color" content="#28a745">
+    <meta name="description" content="موقع مهرجان الضاد - معراج إلى النجاد لنتائج طلاب المرحلة التمهيدية تحت إشراف نادي اللغة العربية N.S.A.">
 </head>
 <body oncontextmenu="return false;">
 
