--- a/index.html
+++ b/index.html
@@ -3,6 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- =================== 🔥 FULL SEO PACK FOR مهرجان الضاد 🔥 =================== -->
+
+<!-- Charset -->
+<meta charset="UTF-8">
+
+<!-- Viewport -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Primary Meta Tags -->
+<meta name="title" content="مهرجان الضاد - معراج إلى النجاد">
+<meta name="description" content="منصة نشر نتائج مهرجان الضاد تحت إشراف نادي اللغة العربية. تابع نتائج الطلاب، نتائج البرامج، ترتيب الفرق، وإحصائيات المشاركات.">
+<meta name="keywords" content="مهرجان الضاد, نتائج الطلاب, اللغة العربية, مسابقات الطلاب, NSA, معراج إلى النجاد, الأنشطة اللغوية, مسابقات عربية, Arabic Fest">
+<meta name="author" content="Mohammed Uvais A.P">
+<meta name="language" content="ar">
+<meta name="distribution" content="global">
+<meta name="rating" content="general">
+<meta name="robots" content="index, follow">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://arabic-fest.vercel.app/">
+
+<!-- Open Graph (Facebook/WhatsApp/Instagram/Telegram) -->
+<meta property="og:locale" content="ar_AR">
+<meta property="og:type" content="website">
+<meta property="og:title" content="مهرجان الضاد - معراج إلى النجاد">
+<meta property="og:description" content="منصة خاصة لنشر نتائج مهرجان الضاد وإظهار أداء الطلاب والبرامج بطريقة جميلة وإحصائية.">
+<meta property="og:url" content="https://arabic-fest.vercel.app/">
+<meta property="og:site_name" content="مهرجان الضاد">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@NSA">
+<meta name="twitter:title" content="مهرجان الضاد - معراج إلى النجاد">
+<meta name="twitter:description" content="تابع أحدث نتائج مهرجان الضاد، نتائج الطلاب، وترتيب النقاط.">
+
+
+<!-- Favicons & App Icons -->
+<link rel="icon" href="img/favicon.png" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16.png">
+<link rel="manifest" href="img/site.webmanifest">
+
+<!-- Theme Color for Mobile -->
+<meta name="theme-color" content="#198754">
+
+<!-- Schema.org (Google Rich Result Enhance) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "مهرجان الضاد - معراج إلى النجاد",
+  "url": "https://your-website.com/",
+  "logo": "https://your-website.com/img/preview.jpg",
+  "description": "منصة نشر نتائج مهرجان الضاد تحت إشراف نادي اللغة العربية.",
+  "founder": "NSA Arabic Club",
+  "foundingDate": "2026",
+  "sameAs": [
+    "https://instagram.com",
+    "https://facebook.com"
+  ]
+}
+</script>
+
+<!-- Performance improvements -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
+    <!-- 🌐 Social Share Preview (Open Graph + Twitter Card) -->
+<meta property="og:title" content="مهرجان الضاد - معراج إلى النجاد">
+<meta property="og:description" content="منصة عرض نتائج مهرجان الضاد - إشراف نادي اللغة العربية. تابع نتائج الطلاب، نتائج البرامج، ترتيب الفرق والمزيد.">
+<meta property="og:url" content="https://arabic-fest.vercel.app/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="مهرجان الضاد - معراج إلى النجاد">
+<meta name="twitter:description" content="منصة نشر نتائج مهرجان الضاد تحت إشراف نادي اللغة العربية.">
+<meta name="twitter:image" content="https://yourwebsite.com/img/preview.jpg">
+
+<!-- SEO Meta Tags -->
+<meta name="description" content="منصة نشر نتائج مهرجان الضاد - معراج إلى النجاد. يشمل نتائج الطلاب، نتائج البرامج، ترتيب النقاط، والمزيد.">
+<meta name="keywords" content="مهرجان الضاد, نتائج الطلاب, اللغة العربية, NSA, معراج إلى النجاد, مسابقة اللغة العربية">
+<meta name="author" content="Mohammed Uvais A.P">
+
+
     <title>مهرجان الضاد</title>
     
     <!-- Google Fonts -->
@@ -17,7 +106,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
     <meta name="theme-color" content="#28a745">
-    <meta name="description" content="موقع مهرجان الضاد - معراج إلى النجاد لنتائج طلاب المرحلة التمهيدية تحت إشراف نادي اللغة العربية N.S.A.">
+   
 </head>
 <body oncontextmenu="return false;">
 
