--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- 🌐 Social Share Preview (Open Graph + Twitter Card) -->
 <meta property="og:title" content="مهرجان الضاد - معراج إلى النجاد">
-<meta property="og:description" content="منصة عرض نتائج مهرجان الضاد - إشراف نادي اللغة العربية. تابع نتائج الطلاب، نتائج البرامج، ترتيب الفرق والمزيد.">
+<meta property="og:description" content="منصة عرض نتائج مهرجان الضاد - تحت إشراف نادي اللغة العربية. تابع نتائج الطلاب، نتائج البرامج، ترتيب الفرق والمزيد.">
 <meta property="og:url" content="https://arabic-fest.vercel.app/">
 <meta property="og:type" content="website">
 
@@ -84,7 +84,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="مهرجان الضاد - معراج إلى النجاد">
 <meta name="twitter:description" content="منصة نشر نتائج مهرجان الضاد تحت إشراف نادي اللغة العربية.">
-<meta name="twitter:image" content="https://yourwebsite.com/img/preview.jpg">
+
 
 <!-- SEO Meta Tags -->
 <meta name="description" content="منصة نشر نتائج مهرجان الضاد - معراج إلى النجاد. يشمل نتائج الطلاب، نتائج البرامج، ترتيب النقاط، والمزيد.">
