--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <meta name="google-site-verification" content="kcm9OUeHMRkZf-Tql7X35jjS6KCHMjo30Jjru4OpKKY" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--google serch -->
+    <meta name="google-site-verification" content="kcm9OUeHMRkZf-Tql7X35jjS6KCHMjo30Jjru4OpKKY" />
+    
     <!-- =================== 🔥 FULL SEO PACK FOR مهرجان الضاد 🔥 =================== -->
 
 <!-- Charset -->
