--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!--google serch -->
     <meta name="google-site-verification" content="kcm9OUeHMRkZf-Tql7X35jjS6KCHMjo30Jjru4OpKKY" />
+    <link rel="manifest" href="site.webmanifest">
+
     
     <!-- =================== 🔥 FULL SEO PACK FOR مهرجان الضاد 🔥 =================== -->
 
