--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!--google serch -->
     <meta name="google-site-verification" content="kcm9OUeHMRkZf-Tql7X35jjS6KCHMjo30Jjru4OpKKY" />
     <link rel="manifest" href="site.webmanifest">
+    <link rel="sitemap" href="sitemap.xml">
+    <link rel="alternate" hreflang="ar" href="https://arabic-fest.vercel.app/">
+    <link rel="site.webmanifest" href="site.webmanifest">
 
     
     <!-- =================== 🔥 FULL SEO PACK FOR مهرجان الضاد 🔥 =================== -->
