--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
     <!--google serch -->
     <meta name="google-site-verification" content="kcm9OUeHMRkZf-Tql7X35jjS6KCHMjo30Jjru4OpKKY" />
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="sitemap" href="sitemap.xml">
+    <link rel="manifest" href="/public/site.webmanifest">
+    <link rel="sitemap" href="/public/sitemap.xml" type="application/xml">
+    <link rel="vercel" href="/public/vercel.json"
+    <link rel robots" href="/public/robots.txt" type="text/plain">
+    <link rel="alternate" hreflang="en" href="https://arabic-fest.vercel.app/">
+
     <link rel="alternate" hreflang="ar" href="https://arabic-fest.vercel.app/">
     <link rel="site.webmanifest" href="site.webmanifest">
 
