--- a/index.html
+++ b/index.html
@@ -283,6 +283,17 @@
                 </div>
             </div>
 
+            <!-- Topstare -->
+             <div class="card fade-in">
+                <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
+                    <span><i class="fas fa-crown text-warning"></i> النجم اللغة </span>
+                
+                </div>
+                <div class="card-body">
+                     <div id="" style="font-weight: 800;color: blueviolet;">هاشم شريف </div>
+                     <hr>
+                     <br>
+                
             <!-- TOP STUDENTS -->
             <div class="card fade-in">
                 <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
@@ -340,6 +351,76 @@
                             <img src="img/3.jpg" alt="Poster 3">
                             <div class="poster-overlay">
                                 <span>ملصق ٣</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/4.jpeg" alt="Poster 4">
+                            <div class="poster-overlay">
+                                <span>ملصق ٤</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/5.jpeg" alt="Poster 5">
+                            <div class="poster-overlay">
+                                <span>ملصق ٥</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/6.jpeg" alt="Poster 6">
+                            <div class="poster-overlay">
+                                <span>ملصق ٦</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/7.jpeg" alt="Poster 7">
+                            <div class="poster-overlay">
+                                <span>ملصق ٧</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/8.jpeg" alt="Poster 8">
+                            <div class="poster-overlay">
+                                <span>ملصق ٨</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/9.jpeg" alt="Poster 9">
+                            <div class="poster-overlay">
+                                <span>ملصق ٩</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <a href="#" target="_blank" class="poster-link">
+                        <div class="poster-card">
+                            <img src="img/10.jpeg" alt="Poster 10">
+                            <div class="poster-overlay">
+                                <span>ملصق ١٠</span>
                             </div>
                         </div>
                     </a>
